# agent-dispatch

./: .gitignore  Cargo.toml  README.md
crates/dispatch-backends/: Cargo.toml
crates/dispatch-backends/src/: backend.rs  error.rs  lib.rs  providers.rs
crates/dispatch-cli/: Cargo.toml  output.md
crates/dispatch-cli/src/: executor.rs  main.rs  prompt_builder.rs  runtime.rs
crates/dispatch-cli/tests/: e2e.rs
crates/dispatch-core/: Cargo.toml
crates/dispatch-core/src/: config.rs  error.rs  lib.rs  mailbox.rs  model.rs  store.rs
docs/: dispatch-flows.md  dispatch-reference-map.md  host-integration-contract.md  prompt-cli-architecture.md
integrations/: README.md
integrations/pi-dispatch-host/: index.ts  json-envelope.js  json-envelope.test.mjs  package.json
prompts/: dispatcher-system.md  worker-template.md
