[workspace]
members = [
    "crates/dispatch-core",
    "crates/dispatch-backends",
    "crates/dispatch-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tempfile = "3.27.0"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
