[package]
name = "dispatch-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
dispatch-backends = { path = "../dispatch-backends" }
dispatch-core = { path = "../dispatch-core" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
uuid.workspace = true

[dev-dependencies]
assert_cmd = "2.0.17"
tempfile = "3.23.0"
